syntax = "proto3";

option csharp_namespace = "azicloud.res";


service WikiCategory {
	rpc Filter_Rows1(NullRequest) returns (stream CategoryModel){}   
	rpc Create1(CategoryModel) returns (CategoryRespone){}
	rpc Delete1(CategoryModel) returns (CategoryRespone){}	
}

message NullRequest{

}

message CategoryRespone {
   string message=1;
}

message CategoryModel {
   int32 id =1;
   string name=2;
   string description=3;
}